# PMRQuadtree

./: CMakeLists.txt  data.txt  data_collector.py  datapy.csv  graph.py  main.cpp  main_v2.cpp  main_v2_w.cpp  nodes.dbf  pmr
